app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workload
spec:
  replicas: 3
  selector:
    matchLabels:
      app: workload
  template:
    metadata:
      labels:
        app: workload
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: workloaduser
      nodeSelector:
        kubernetes.azure.com/agentpool: appspool
      tolerations:
        - key: workload
          operator: Equal
          value: apps
          effect: NoSchedule
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: workload
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: workload
      containers:
        - name: workload
          image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 250m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
