app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workload
spec:
  type: ClusterIP
  selector:
    app: workload
  ports:
    - name: http
      port: 80
      targetPort: http
